--- a/A2/slidingtiles/app/src/main/res/layout/choose_complexity.xml
+++ b/A2/slidingtiles/app/src/main/res/layout/choose_complexity.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Choose Dimension"
+        android:text="Choose Dimension less than 20"
         android:layout_centerHorizontal="true"
         android:textSize="20dp"
         android:layout_above="@+id/EditText"
