--- a/A2/slidingtiles/app/src/main/res/layout/activity_scoreboard.xml
+++ b/A2/slidingtiles/app/src/main/res/layout/activity_scoreboard.xml
@@ -7,7 +7,7 @@
     tools:context=".ScoreboardActivity">
 
 
-    <EditText
+    <TextView
         android:id="@+id/ScoreboardTitleLabel"
         android:layout_width="121dp"
         android:layout_height="51dp"
@@ -15,13 +15,11 @@
         android:layout_marginTop="104dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:text="@string/scoreboard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints=""
         tools:ignore="LabelFor" />
 
     <Button
