--- a/A2/slidingtiles/app/src/main/res/layout/activity_main.xml
+++ b/A2/slidingtiles/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,12 @@
         android:layout_height="wrap_content"
         android:text="Undo" />
 
+    <Button
+        android:id="@+id/SaveButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save" />
+
     <fall2018.csc2017.slidingtiles.GestureDetectGridView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/grid"
