--- a/A2/slidingtiles/app/src/main/res/layout/activity_user_scoreboard.xml
+++ b/A2/slidingtiles/app/src/main/res/layout/activity_user_scoreboard.xml
@@ -75,4 +75,4 @@
         android:layout_below="@id/ScoreHeader"
         android:layout_alignParentRight="true"
          />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
