--- a/A2/slidingtiles/app/src/main/res/layout/activity_user_scoreboard.xml
+++ b/A2/slidingtiles/app/src/main/res/layout/activity_user_scoreboard.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
