--- a/A2/slidingtiles/app/src/main/res/layout/activity_main.xml
+++ b/A2/slidingtiles/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,23 @@
     tools:context="fall2018.csc2017.slidingtiles.GameActivity">
 
 
-    <Button
-        android:id="@+id/UndoButton"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="428dp"
         android:layout_height="wrap_content"
-        android:text="Undo" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/SaveButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save" />
+        <Button
+            android:id="@+id/UndoButton"
+            android:layout_width="201dp"
+            android:layout_height="wrap_content"
+            android:text="Undo" />
+
+        <Button
+            android:id="@+id/SaveButton"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:text="Save" />
+    </LinearLayout>
 
     <fall2018.csc2017.slidingtiles.GestureDetectGridView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
