--- a/A2/slidingtiles/app/src/main/res/layout/activity_starting_.xml
+++ b/A2/slidingtiles/app/src/main/res/layout/activity_starting_.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="20dp"
     tools:context="fall2018.csc2017.slidingtiles.StartingActivity">
 
     <TextView
@@ -14,23 +15,44 @@
         android:layout_centerVertical="true"
         android:gravity="center"
         android:text="Welcome To Sliding Tiles \n A Puzzle Game where you must arrange the numbers in the correct order"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:layout_marginBottom="20dp"/>
 
-    <Button
-        android:id="@+id/StartButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/GameText"
-        android:layout_centerHorizontal="true"
-        android:text="New Game" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       android:layout_centerHorizontal="true"
+       android:layout_below="@+id/GameText">
+       <Button
+           android:id="@+id/StartButton"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_weight="1"
+           android:text="New Game"
+           android:layout_marginBottom="10dp"/>
 
-    <Button
-        android:id="@+id/LoadButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/GameText"
-        android:layout_toStartOf="@+id/StartButton"
-        android:text="Load Saved Game" />
+       <Button
+           android:id="@+id/LoadButton"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="Load Saved Game"
+           android:layout_weight="1"
+           android:layout_marginBottom="10dp"/>
+
+       <Button
+           android:id="@+id/ChooseTilePicture"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="Choose Tile Picture"
+           android:layout_weight="1"
+           android:layout_marginBottom="10dp"/>
+
+
+   </LinearLayout>
+
+
+
 
 
 </RelativeLayout>
