--- a/A2/slidingtiles/app/src/main/res/layout/gamelauncheractivity.xml
+++ b/A2/slidingtiles/app/src/main/res/layout/gamelauncheractivity.xml
@@ -14,9 +14,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="126dp"
-        android:layout_marginTop="121dp"
-        android:layout_marginEnd="127dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="332dp"
+        android:layout_marginEnd="219dp"
         app:srcCompat="@drawable/tile_11"
         tools:layout_editor_absoluteX="34dp"
         tools:layout_editor_absoluteY="50dp" />
@@ -28,9 +28,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="275dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="21dp"
+        android:layout_marginStart="293dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="3dp"
         android:text="SignOff" />
 
     <Button
@@ -38,9 +38,24 @@
         android:layout_width="148dp"
         android:layout_height="59dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="385dp"
-        android:layout_marginBottom="123dp"
+        android:layout_marginTop="383dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="125dp"
         android:text="Scoreboards" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:background="?attr/colorError"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
+
+
 </RelativeLayout>
