--- a/Phase1/slidingtiles/app/src/main/res/layout/activity_sliding_scoreboard.xml
+++ b/Phase1/slidingtiles/app/src/main/res/layout/activity_sliding_scoreboard.xml
@@ -39,13 +39,15 @@
         android:id="@+id/usernameText" />
 
     <TextView
+        android:id="@+id/scoreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Score"
-        android:layout_marginLeft="20dp"
-        android:id="@+id/scoreText"
+        android:layout_alignTop="@+id/usernameText"
         android:layout_alignRight="@id/usernameText"
-        />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="-177dp"
+        android:text="Score" />
 
 
 
