--- a/Phase1/slidingtiles/app/src/main/res/layout/activity_sliding_scoreboard_row.xml
+++ b/Phase1/slidingtiles/app/src/main/res/layout/activity_sliding_scoreboard_row.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
-    android:layout_weight="2">
+    android:layout_columnSpan="2"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/username"
         android:textSize="12dp"
-        android:layout_weight="1"
+        android:layout_gravity="left"
+        android:layout_column="0"
      />
 
     <TextView
@@ -20,7 +22,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/score"
         android:textSize="12dp"
-        android:layout_weight="1" />
+        android:layout_column="1"
+         />
 
 
-</LinearLayout>
+</GridLayout>
