--- a/Phase1/slidingtiles/app/src/main/res/layout/activity_main.xml
+++ b/Phase1/slidingtiles/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="fall2018.csc2017.slidingtiles.GameActivity">
+    tools:context="fall2018.csc2017.GameCentre.GameActivity">
 
 
     <LinearLayout
@@ -25,13 +25,13 @@
             android:text="Save" />
     </LinearLayout>
 
-    <fall2018.csc2017.slidingtiles.GestureDetectGridView xmlns:android="http://schemas.android.com/apk/res/android"
+    <fall2018.csc2017.GameCentre.GestureDetectGridView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="3pt"
-        tools:context="fall2018.csc2017.slidingtiles.GameActivity" />
+        tools:context="fall2018.csc2017.GameCentre.GameActivity" />
 
 </LinearLayout>
 
