--- a/Phase1/slidingtiles/app/src/main/res/layout/activity_starting_.xml
+++ b/Phase1/slidingtiles/app/src/main/res/layout/activity_starting_.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
-    tools:context="fall2018.csc2017.slidingtiles.StartingActivity">
+    tools:context="fall2018.csc2017.GameCentre.StartingActivity">
 
     <TextView
         android:id="@+id/GameText"
