--- a/Phase2/GameCentre/app/src/main/res/layout/activity_simon_starting.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_simon_starting.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fall2018.csc2017.GameCentre.Simon.SimonGameActivity">
+    tools:context="fall2018.csc2017.GameCentre.Simon.SimonStartingActivity">
 
 </android.support.constraint.ConstraintLayout>
