Worked on starting activity and added it to the game launcher.

--- a/Phase2/GameCentre/app/src/main/res/layout/gamelauncheractivity.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/gamelauncheractivity.xml
@@ -56,7 +56,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SlidingTiles" />
+            <Button
+                android:id="@+id/SimonGame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Simon" />
         </LinearLayout>
+
     </ScrollView>
 
 
