--- a/Phase2/GameCentre/app/src/main/res/layout/activity_starting_.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_starting_.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
-    tools:context="fall2018.csc2017.GameCentre.StartingActivity">
+    tools:context="fall2018.csc2017.GameCentre.SlidingTiles.SlidingTilesStartingActivity">
 
     <TextView
         android:id="@+id/GameText"
@@ -50,8 +49,6 @@
 
 
    </LinearLayout>
-
-
 
 
 
