--- a/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="fall2018.csc2017.GameCentre.Simon.SimonGameActivity">
+    <LinearLayout
+        android:layout_width="428dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/UndoButton"
+            android:layout_width="201dp"
+            android:layout_height="wrap_content"
+            android:text="Undo" />
+    </LinearLayout>
+
+    <fall2018.csc2017.GameCentre.GestureDetectGridViews.GestureDetectGridViewShortPress xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/grid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="3pt"
+        tools:context="fall2018.csc2017.GameCentre.Simon.SimonGameActivity" />
+
+</LinearLayout>
