Further refactoring to scoreboard as well as creating minesweeper scoreboard. I also made sure that the score screen activity can be used by all games.

--- a/Phase2/GameCentre/app/src/main/res/layout/activity_scoreboard.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_scoreboard.xml
@@ -46,6 +46,16 @@
         android:text="Simon Scoreboard"
         />
 
+    <Button
+        android:id="@+id/MinesweeperScoreboard"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/SimonScoreboardLabel"
+        android:layout_marginTop="30dp"
+        android:text="Minesweeper Scoreboard"
+        />
+
     <TextView
         android:id="@+id/InstructionsLabel"
         android:layout_height="wrap_content"
