--- a/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="fall2018.csc2017.GameCentre.Simon.SimonGameActivity">
     <LinearLayout
         android:layout_width="428dp"
