--- a/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
@@ -15,6 +15,12 @@
             android:layout_width="201dp"
             android:layout_height="wrap_content"
             android:text="Undo" />
+
+        <Button
+            android:id="@+id/saveButton"
+            android:layout_width="201dp"
+            android:layout_height="wrap_content"
+            android:text="Save" />
     </LinearLayout>
 
     <fall2018.csc2017.GameCentre.GestureDetectGridViews.GestureDetectGridViewShortPress xmlns:android="http://schemas.android.com/apk/res/android"
