--- a/Phase2/GameCentre/app/src/main/res/layout/gamelauncheractivity.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/gamelauncheractivity.xml
@@ -61,6 +61,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Simon" />
+            <Button
+                android:id="@+id/MinesweeperGame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Minesweeper" />
         </LinearLayout>
 
     </ScrollView>
