Fixed the issue when you were picking a complexity and hitting enter would create a new line. It now moves on to the next edit text component. Also, I hard coded the back button for some activities because we had the issue of going back from the games to the choosing complexity screen, which we don't want.

--- a/Phase2/GameCentre/app/src/main/res/layout/activity_choose_dimension_simon.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_choose_dimension_simon.xml
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/EditDimension"
         android:layout_centerInParent="true"
-        android:layout_margin="30dp"/>
+        android:layout_margin="30dp"
+        android:inputType="text"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,7 +37,8 @@
         android:id="@+id/editUndo"
         android:layout_below="@id/undoInstructions"
         android:layout_centerInParent="true"
-        android:layout_margin="30dp"/>
+        android:layout_margin="30dp"
+        android:inputType="text"/>
 
     <Button
         android:id="@+id/submitEverything"
