--- a/Phase2/GameCentre/app/src/main/res/layout/choose_complexity.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/choose_complexity.xml
@@ -18,7 +18,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/EditDimension"
         android:layout_centerInParent="true"
-        android:layout_margin="30dp"/>
+        android:layout_margin="30dp"
+        android:inputType="text"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,7 +37,8 @@
         android:id="@+id/editUndo"
         android:layout_below="@id/undoInstructions"
         android:layout_centerInParent="true"
-        android:layout_margin="30dp"/>
+        android:layout_margin="30dp"
+        android:inputType="text"/>
 
     <Button
         android:layout_width="wrap_content"
