--- a/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper.xml
@@ -12,16 +12,19 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/UndoButton"
-            android:layout_width="201dp"
-            android:layout_height="wrap_content"
-            android:text="Undo" />
-
-        <Button
             android:id="@+id/SaveButton"
             android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:text="Save" />
+
+        <EditText
+            android:id="@+id/HP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="number" />
+
     </LinearLayout>
 
     <fall2018.csc2017.GameCentre.GestureDetectGridViews.GestureDetectGridViewLongPress xmlns:android="http://schemas.android.com/apk/res/android"
