--- a/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper.xml
@@ -17,7 +17,14 @@
             android:layout_height="wrap_content"
             android:text="Save" />
 
-        <EditText
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="127dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+        <TextView
             android:id="@+id/HP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
