--- a/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper.xml
@@ -18,19 +18,20 @@
             android:text="Save" />
 
         <TextView
-            android:id="@+id/timer"
-            android:layout_width="127dp"
-            android:layout_height="30dp"
+            android:id="@+id/HP"
+            android:layout_width="68dp"
+            android:layout_height="48dp"
             android:layout_weight="1"
+            android:ems="10"
+            android:inputType="number"
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/HP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/timer"
+            android:layout_width="73dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number" />
+            android:text="TextView" />
 
     </LinearLayout>
 
