--- a/Phase2/GameCentre/app/src/main/res/layout/activity_choose_dimension.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_choose_dimension.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fall2018.csc2017.GameCentre.Simon.ChooseDimensionSimonActivity">
+    tools:context="fall2018.csc2017.GameCentre.ChooseDimensionActivity">
 
     <TextView
         android:layout_width="wrap_content"
