--- a/Phase2/GameCentre/app/src/main/res/layout/activity_main.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/UndoButton"
+            android:id="@+id/undoButton"
             android:layout_width="201dp"
             android:layout_height="wrap_content"
             android:text="Undo" />
