--- a/Phase2/GameCentre/app/src/main/res/layout/activity_score.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_score.xml
@@ -48,6 +48,18 @@
          />
 
     <Button
+        android:id="@+id/NewGameButton"
+        android:layout_width="227dp"
+        android:layout_height="69dp"
+        android:layout_below="@+id/HighScoreLabel"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="115dp"
+        android:text="New Game" />
+    <Button
         android:id="@+id/MainMenuButton"
         android:layout_width="227dp"
         android:layout_height="69dp"
