--- a/Phase2/GameCentre/app/src/main/res/layout/ativity_minesweaper.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/ativity_minesweaper.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gridview"
+<fall2018.csc2017.GameCentre.GestureDetectGridViews.GestureDetectGridViewLongPress xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/grid"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnWidth="90dp"
