--- a/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
@@ -13,12 +13,12 @@
         android:layout_marginRight="4dp"
         android:weightSum="3">
 
-        <Button
-            android:id="@+id/undoButton"
+        <TextView
+            android:id="@+id/undoCount"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Undo" />
+            android:text="Undo Count: " />
 
         <Button
             android:id="@+id/saveButton"
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hint" />
+            android:text="Replay" />
 
     </LinearLayout>
 
