--- a/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
@@ -13,18 +13,12 @@
         android:layout_marginRight="4dp"
         android:weightSum="3">
 
-        <!--<TextView-->
-            <!--android:id="@+id/undoCount"-->
-            <!--android:layout_weight="1"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Undo Count: " />-->
         <Button
             android:id="@+id/undoButton"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Undo Button" />
+            android:text="Redo Pattern" />
 
 
         <Button
@@ -32,13 +26,8 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save" />
-        <Button
-            android:id="@+id/replayButton"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Replay" />
+            android:text="Save Game" />
+
 
     </LinearLayout>
 
