made all buttons adapt a common theme

--- a/Phase2/GameCentre/app/src/main/res/layout/activity_choose_dimension.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_choose_dimension.xml
@@ -46,6 +46,7 @@
         android:layout_below="@id/editUndo"
         android:layout_centerHorizontal="true"
         android:onClick="submitInput"
+        style="@style/AppTheme"
         android:text="Submit"
         android:textColor="@color/colorPrimary" />
 
