--- a/Phase2/GameCentre/app/src/main/res/layout/activity_starting_.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_starting_.xml
@@ -24,6 +24,7 @@
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/GameText">
        <Button
+           style="@style/AppTheme"
            android:id="@+id/StartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -32,6 +33,7 @@
            android:layout_marginBottom="10dp"/>
 
        <Button
+           style="@style/AppTheme"
            android:id="@+id/LoadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -40,6 +42,7 @@
            android:layout_marginBottom="10dp"/>
 
        <Button
+           style="@style/AppTheme"
            android:id="@+id/ChooseTilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
