--- a/Phase2/GameCentre/app/src/main/res/values/colors.xml
+++ b/Phase2/GameCentre/app/src/main/res/values/colors.xml
@@ -95,6 +95,7 @@
 <color name="SaddleBrown">#8B4513</color>
 <color name="DarkMagenta">#8B008B</color>
 <color name="DarkRed">#8B0000</color>
+<color name="ButtonBlue">#008AB8</color>
 <color name="BlueViolet">#8A2BE2</color>
 <color name="LightSkyBlue">#87CEFA</color>
 <color name="SkyBlue">#87CEEB</color>
