--- a/Phase2/GameCentre/app/src/main/res/drawable/iconshape.xml
+++ b/Phase2/GameCentre/app/src/main/res/drawable/iconshape.xml
@@ -3,14 +3,8 @@
     <corners
         android:radius="14dp"
         />
-    <gradient
-        android:angle="45"
-        android:centerX="35%"
-        android:centerColor="#47A891"
-        android:startColor="#E8E8E8"
-        android:endColor="#000000"
-        android:type="linear"
-        />
+    <solid android:color="@color/LightSkyBlue">
+    </solid>
     <padding
         android:left="0dp"
         android:top="0dp"
