--- a/Phase2/GameCentre/app/src/main/res/layout/activity_login.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_login.xml
@@ -36,6 +36,7 @@
 
     <Button
         android:id="@+id/login"
+        style="@style/AppTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -48,6 +49,7 @@
 
     <Button
         android:id="@+id/registerbutton"
+        style="@style/AppTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
