--- a/Phase2/GameCentre/app/src/main/res/layout/activity_sliding_scoreboard.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_sliding_scoreboard.xml
@@ -8,6 +8,7 @@
 
 
     <Button
+        style="@style/AppTheme"
         android:id="@+id/GoBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
